# platformer

./: .gitignore  CMakeLists.txt  header.h  main.cpp
classes/: Coin.cpp  Coin.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  Mushroom.cpp  Mushroom.h  TextureManager.cpp  TextureManager.h
